<resources>
    <string name="app_name">Quiz</string>
    <string name="dummy_question">An important lesson learned in online political campaigns in recent years and other collaborative efforts that had online components is</string>
    <string name="dummy1">a. people much prefer to do their own thing and not work in groups</string>
    <string name="dummy2">b. there is always a couple people who disrupt the work of others in the group</string>
    <string name="dummy3">c. people need to be able to meet face to face at times as well as online</string>
    <string name="dummy4">d. social media has still not lived up to its promise of helping people collaborate</string>
    <string name="BG">#2E334E</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="play_again">play again</string>
    <string name="_0_25">0/25</string>
    <string name="score">score:</string>
    <string name="quit">quit</string>
    <string name="awesome">awesome!!!</string>
    <string name="squiz">sQUIZ</string>
    <string name="welcome_to">welcome to</string>
    <string name="app_dialog">pissed at all the tedious efforts of old school quiz platforms? try giving sQUIZ a try. all your awesome quizzes just a tap away...</string>
    <string name="quiz_id">quiz ID</string>
    <string name="e_g_sherimello">e.g. sheriMello</string>
    <string name="attend">attend</string>
    <string name="s">S</string>
</resources>